# employeeGUI

./: .gitignore  1导入文档.md  ADB_ARCHITECTURE_OPTIMIZATION.md  ADB_ARCHITECTURE_STANDARDS.md  ADB_ARCHITECTURE_UNIFICATION_REPORT.md  ADB_CONNECTION_GUIDE.md  ADB_DEVICE_DETECTION_FIX.md  ADB_GLOBAL_MIGRATION_GUIDE.md  ADB_PRECISION_TARGETING_GUIDE.md  ADB_SOLUTION_SUMMARY.md  ADB功能重构完成报告.md  ADB模块代码清理完成报告.md  ADB模块代码清理计划.md  ADB诊断功能真实命令回显增强完成报告.md  ADB诊断模块UI最佳实践布局方案.md  ADB诊断模块UI重构总结.md  ADB诊断模块集成测试报告.md  ADB路径智能检测说明.md  APPLILEYCYCLE_MANAGER_DOCUMENTATION.md  APP_DETECTION_FRAMEWORK_INTEGRATION_COMPLETE.md  APP_STATE_DETECTION_IMPLEMENTATION.md  ARCHITECTURE_MIGRATION_GUIDE.md  ARCHITECTURE_REFACTOR_PROPOSAL.md  BATCH_MATCHING_DEBUG_SUMMARY.md  BLUE_STYLE_TROUBLESHOOT.md  CHILD_NODE_ENHANCEMENT_README.md  COMPILATION_SUCCESS_REPORT.md  CONTACT_AUTOMATION_INTEGRATION_REPORT.md  CONTACT_AUTOMATION_MODULE_GUIDE.md  CONTACT_IMPORT_ARCHITECTURE.md  CONTACT_IMPORT_DISPLAY_ENHANCEMENT.md  CONTACT_IMPORT_ERROR_FIX.md  CONTACT_IMPORT_FEATURE_GUIDE.md  CONTACT_IMPORT_INTEGRATION_GUIDE.md  CONTACT_IMPORT_MODULAR_ARCHITECTURE.md  CONTROL_FLOW_ARCHITECTURE.md  CONTROL_FLOW_INTEGRATION_GUIDE.md  CRASH_FIX_REPORT.md  CUSTOM_STRATEGY_LOGIC_FIX_REPORT.md  DARK_THEME_FIX_REPORT.md  (+187 more)
.trash/: README.md
src-tauri/: Cargo.toml  QUICK_XML_REFACTOR_PLAN.md  contacts_AHXVCP3526428590_0-9.vcf  contacts_AHXVCP3526428590_0-99.vcf  contacts_AHXVCP3526428590_auto_100_1758994935575.vcf  contacts_AHXVCP3526428590_auto_100_1759137741216.vcf  contacts_import.vcf  tauri.conf.json  temp_contacts_1757529945206.txt  temp_contacts_1757575126129.txt  temp_contacts_1759047268802.vcf  temp_contacts_1759059827369.vcf  temp_contacts_1759142136705.vcf  temp_contacts_1759147401340.vcf
src-tauri/examples/: app_lifecycle_usage_example.rs
src-tauri/icons/: placeholder.txt
src-tauri/src/: main.rs  screenshot_service.rs  ui_reader.rs  xml_judgment_service.rs  xml_judgment_service_old.rs
src-tauri/src/application/: device_metrics.rs  mod.rs  normalizer.rs  scroll_until_found.rs
src-tauri/vcf_output/: contacts_1758463732.vcf
vcf-import-test/: Cargo.toml  README.md
vcf-import-test/src/: main.rs  vcf_importer.rs
vcf-import-test/test-data/: sample_contacts.txt
xiaohongshu-follow-test/: Cargo.toml  NAVIGATION_TEST_LOG.md  PROJECT_SUMMARY.md  README.md  SUCCESSFUL_NAVIGATION_LOG.md  test.bat  test.sh
xiaohongshu-follow-test/src/: debug_helper.rs  main.rs  types.rs  ui_analyzer.rs  xiaohongshu_automator.rs
(+1268 files in other folders)
