[package]
name = "employee-gui"
version = "0.2.0"
description = "Employee Management System"
authors = ["you"]
license = ""
repository = ""
default-run = "employee-gui"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
chrono = { version = "0.4.31", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.29", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
csv = "1.3"
regex = "1.10"
encoding_rs = "0.8"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
quick-xml = "0.35"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
lazy_static = "1.4"
async-trait = "0.1"
colored = "2.1"
md5 = "0.7"
once_cell = "1.19"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
