[package]
name = "vcf-import-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-vcf-import"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"