[package]
name = "xiaohongshu-follow-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xiaohongshu-follow"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
